--- a/public/style.css
+++ b/public/style.css
@@ -26,7 +26,7 @@ nav{
     padding: 5px;
 }
 
-h2{
+nav h2{
     font-size: 2.3em;
     margin: 0 40% 0 3%;
     align-self: center;
@@ -74,9 +74,65 @@ nav li a:hover{
     float: left;
     margin-left: 5%;
     font-size: 1.3em;
+    margin-bottom: 4%;
 }
 
 #tacos{
     float: right;
     margin-right: 3%;
 }
+
+#events{
+    clear: both;
+    margin-left: 5%;
+    font-size: 2em;
+}
+
+.event-info{
+    margin-left: 3%;
+}
+
+.event-info h3{
+    font-size: 1em;
+    color: #A60C10;
+}
+
+.menuBtn{
+    /* background-color: transparent; */
+    border: none;
+    width: 5%;
+    border-radius: 5px;
+    margin-left: 2%;
+}
+
+.menuBtn:hover{
+    /* background-color: #88A33C; */
+    border-radius: 20px;
+    transition: width 3s;
+}
+
+.menuBtn i{
+    font-size: 1.4em;
+}
+
+#event-text{
+    display: none;
+    font-size: 0.7em;
+    margin-left: 3%;
+}
+
+#event-text p{
+    font-size: 1.2em;
+    width: 80%;
+    margin-bottom: 0;
+}
+
+#event-text li{
+    list-style-type: none;
+    line-height: 5vh;
+}
+
+.bold{
+    font-weight: bold;
+}
+
